tests/type-check/bad/function-tuple-any-to-bool.arr
fun f(y:: {Number; Any}) -> {Number; Boolean}:
    y
end
